# LabFileChecker

./: .gitignore  .pre-commit-config.yaml  LICENSE  LVE_LABBOOK_LABMETADATA_V09_Joon.pos.xlsx  README.md  requirements.txt  setup.cfg
src/: config.yml
src/labfilechecker/: __init__.py  __main__.py  extract_config.py  lint.py  lint_result.py  lint_tests.py  main.py  utils.py
src/labfilechecker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
