[metadata]
name = labfilechecker
version = attr: labfilechecker.__version__
author = Joon Klaps
author_email = joon.klaps@kuleuven.be
description = A tool to check lab excel files
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = excel, lab, checker
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    labfilechecker = labfilechecker.__main__:app

[options.packages.find]
where = src